slides/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  selector:
    my-label: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
